--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   }
 }
