--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "daisyui": "^0.28.0",
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
