--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "daisyui": "^0.28.0",
     "next": "10.2.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "theme-change": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^15.6.0",
