--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "daisyui": "^0.28.0",
+    "date-fns": "^2.21.3",
+    "mongo": "^0.1.0",
     "next": "10.2.2",
+    "next-auth": "^3.23.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "theme-change": "^2.0.2"
