--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "daisyui": "^0.28.0",
     "next": "10.2.2",
+    "next-i18next": "^8.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "theme-change": "^2.0.2"
